--- a/SMS/SMSapp/templates/studentlist.html
+++ b/SMS/SMSapp/templates/studentlist.html
@@ -213,7 +213,7 @@
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <button type="submit" class="btn btn-primary"  id="savechanges-btn-modal">Save changes</button>
+                        <button type="submit" class="btn btn-primary"  id="savechanges-btn-modal">Save Changes</button>
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                     </div>
                 </div>
