added close btn

--- a/SMS/SMSapp/templates/grades.html
+++ b/SMS/SMSapp/templates/grades.html
@@ -215,6 +215,7 @@
   
           <div class="modal-footer">
             <button type="submit" id="savechanges-btn-modal" class="btn btn-success">Save Changes</button>
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
           </div>
         </div>
       </form>
